OAKHILL/src/objects/MN_Page_Layout__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Prefill__c</fullName>
        <label>Email Prefill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldSetName__c</fullName>
        <label>FieldSetName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <label>RecordTypeId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendEmail_SOSL__c</fullName>
        <defaultValue>&apos;IN NAME FIELDS RETURNING Contact (Id, Name, Email WHERE Email!=null ORDER BY Name),Group (Id, Name,Type ORDER BY Name)&apos;</defaultValue>
        <label>SendEmail SOSL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <label>MN Page Layout</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FieldSetName__c</columns>
        <columns>RecordType__c</columns>
        <columns>Profile__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>Email_Prefill__c</columns>
        <columns>RecordTypeId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MN Page Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MN Page Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>